@@ -15,6 +15,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk):
 ----------------------------
 
+- WCS 2.0: Adjusted definition of NilValues.
+
 - Fixed handling of PROJ_LIB value relative to mapfile path (#3094)
 
 - Fixed compilation error with opengl support (#3769)
